some fixes to langswticher on mobile and added images to content block

--- a/src/components/reuse/ContentBlock/ContentBlock.module.scss
+++ b/src/components/reuse/ContentBlock/ContentBlock.module.scss
@@ -44,6 +44,7 @@
   font-size: var(--font-size-big);
   line-height: 1.25em;
 }
+
 .numberedList {
   margin-bottom: var(--pad-3);
   .listItem {
@@ -62,4 +63,61 @@
       list-style-type: circle;
     }
   }
+}
+
+// NEW: Image block styles
+.imageBlock {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  @include vari(--image-gap, --pad-3, --pad-3, --pad-3, --pad-4);
+  gap: var(--image-gap);
+  @include vari(
+    --image-margin,
+    var(--pad-2),
+    var(--pad-3),
+    var(--pad-3),
+    var(--pad-4)
+  );
+  margin: var(--image-margin) auto;
+
+  &--small {
+    @include vari(--image-max-width, 100%, 50%, 40%, 30%);
+    max-width: var(--image-max-width);
+  }
+
+  &--medium {
+    @include vari(--image-max-width, 100%, 75%, 60%, 50%);
+    max-width: var(--image-max-width);
+  }
+
+  &--large {
+    @include vari(--image-max-width, 100%, 100%, 85%, 75%);
+    max-width: var(--image-max-width);
+  }
+
+  &--full {
+    max-width: 100%;
+  }
+}
+
+.imageWrapper {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  @include vari(--image-radius, 4px, 6px, 6px, 8px);
+  border-radius: var(--image-radius);
+
+  img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+}
+
+.imageCaption {
+  text-align: center;
+  font-style: italic;
+  @include vari(--caption-margin-top, 0.25rem, 0.25rem, 0.5rem, 0.5rem);
+  margin-top: var(--caption-margin-top);
 }
